src/snapshots/rublocks__codegen__tests__snapshot_tests__emit_cargo_toml_with_postgres_and_migrations.snap
---
source: src/codegen.rs
expression: toml
---
# Generated by rublocks. Do not edit by hand.
[package]
name = "rb_test"
version = "0.0.0"
description = "snapshot test"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
futures-util = "0.3"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tower-http = { version = "0.6", features = ["set-header", "trace"] }
http = "1"
